--- a/BusquedaDanielV1/app/src/main/res/values/strings.xml
+++ b/BusquedaDanielV1/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="menu_principal">Menu Principal</string>
     <string name="control_bultos">Control Bultos</string>
     <string name="name">Name</string>
+    <string name="lista_de_pedidos">Lista de Pedidos</string>
 
     <string-array name="Estadosdisponibles">
         <item>Aceptación Total</item>
